v3/css/index.css
#doc {
  display: none;
}

/* mobile view link */
@media only screen and (max-width: 600px) {
  #mobileview { display: block; }
}
@media only screen and (min-width: 601px) {
  #mobileview { display: none; }
}
#mobileview {
  position: absolute;
  z-index: 9999;
  top: 0.1%;
  right: 1.2%;
  font-size: 10px;
}
#mobileview p {
  margin: 10px auto;
  text-align: right;
}
#mobileview a { color: white; }


body {

  color: #283747;
  font-size: 14px;
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  line-height: 22px;
  word-wrap: break-word;
  position: relative;
  min-height: 100vh;
}


strong { font-weight: bold; }
em { font-style: italic; }
sup { vertical-align: super; font-size: smaller; }
sub { vertical-align: sub; font-size: smaller; }


.text--sub {
  font-size: 12px;
  letter-spacing: 0.5rem;
  text-transform: uppercase;
  margin-bottom: 40px;
}

h1 {
  font-family: "Poppins", sans-serif;
  font-size: 4.5em;
  font-weight: 700;
  line-height: 110px;
  margin-left: 0px;
}
div[data-slide="0"] h1,
div[data-slide="6"] h1 {
  font-size: 3em;
}

.slide-nav,
.subslide-nav{
    font-size: 16px;
}

p {
  text-align: justify;
  font-size: 14px;
  margin-bottom: 1em;
}


/* subsection tabs */
.subslider__navi {
    margin-bottom: 1em;
}

/* lists */
li {
  list-style: decimal outside none;
  display: list-item;
  margin-left: 40px;
  margin-right: 60px;
}

table {
  display: block;
  width: 100%;
  overflow: auto;
  word-break: keep-all;
  margin-top: 0;
  margin-bottom: 16px;
  border-collapse: collapse;
  border-spacing: 0;
  text-indent: initial;
  border-color: grey;
  box-sizing: border-box;
  word-wrap: break-word;
  vertical-align: middle;
}
thead {
  display: table-header-group;
  background-color: #f8f8f8;
}
tbody {
  display: table-row-group;
}
tr {
  display: table-row;
  background-color: #fff;
  background-color: transparent;
  border-top: 1px solid #ccc;
}
tr:nth-child(2n) {
  background-color: #f8f8f8;
}
th,
td {
  padding: 6px 13px;
  border: 1px solid #ddd;

  display: table-cell;
}
th {
  font-weight: bold;
}   

/* alert boxes */
.alert {
  display: block;
  box-sizing: border-box;

  padding: 10px 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
}
.alert p {
  margin: 0 0 1em 0;
}
.alert p:last-child {
  margin-bottom: 0;
}
.alert-warning {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border-color: #faebcc;
}
.alert-info {
  color: #31708f;
  background-color: #d9edf7;
  border-color: #bce8f1;
}









/* The emerging W3C standard
   that is currently Firefox-only */
* {
  scrollbar-width: thin;
  scrollbar-color: blue orange;
}

/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: 3px;
}

*::-webkit-scrollbar-track {
  background: transparent;
  margin-top: 195px;
  margin-bottom: 75px;
}

*::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.3);
  background: #283747;
  background: rgba(40, 55, 71, 0.3);
  opacity: 0.5;
  border-radius: 50px;
}

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}


.slider__warpper {
  position: relative;
  width: 100%;
}

.slider__navi {
  position: absolute;
  top: 50%;
  right: 1%;
  left: 76%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  z-index: 999;
}

.slider__navi a {
  display: block;
  line-height: 30px;
  text-align: center;
  text-decoration: none;
  margin: 0px 0;
  box-shadow: none;
  color: white;
  background: rgba(0, 0, 0, 0);
}

.slider__navi a:hover:not(.active) {
  text-decoration: underline;
}

.slider__navi a.active {
  color: black;
  background: rgba(255, 255, 255, 1);
}



.flex__container {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  -o-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-justify-content: flex-start;
  -moz-justify-content: flex-start;
  -ms-justify-content: flex-start;
  -o-justify-content: flex-start;
  justify-content: flex-start;
  height: 100vh;
  width: 100%;
  z-index: 1;
}

.flex__container.flex--active {
  z-index: 2;
}

.flex__item {
  height: 100vh;
  color: #fff;
  color: #283747;
  transition: transform 0.1s linear;
}

.flex__item--left {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  align-items: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  width: 75%;
  /*max-width:750px;*/
  transform-origin: left bottom;
  transition: transform 0.1s linear 0.4s;
  opacity: 0;
  position: relative;
  overflow: hidden;
}

.flex__item--right {
  width: 25%;
  /*max-width:250px;*/
  transform-origin: right center;
  transition: transform 0.1s linear 0s;
  opacity: 0;
}

.flex--preStart .flex__item--left,
.flex--preStart .flex__item--right,
.flex--active .flex__item--left,
.flex--active .flex__item--right {
  opacity: 1;
}


/* all sections */
div[data-slide="0"] .flex__item--left,
div[data-slide="1"] .flex__item--left,
div[data-slide="2"] .flex__item--left,
div[data-slide="3"] .flex__item--left,
div[data-slide="4"] .flex__item--left,
div[data-slide="5"] .flex__item--left,
div[data-slide="6"] .flex__item--left,
div[data-slide="7"] .flex__item--left {
  background: #f3f3f3;
}
/* tldr */
div[data-slide="0"] .flex__item--right {
  background: #b0b0b0;
}
/* history */
div[data-slide="1"] .flex__item--right {
  background: #004e7c;
}
/* magic */
div[data-slide="2"] .flex__item--right {
  background: #145e7a;
}
/* infrastructure */
div[data-slide="3"] .flex__item--right {
  background: #266150;
}
/* location */
div[data-slide="4"] .flex__item--right {
  background: #283747;
}
/* servants */
div[data-slide="5"] .flex__item--right {
  background: #8f3c47;
}
/* summoning */
div[data-slide="6"] .flex__item--right {
  background: #993976;
}
/* church */
div[data-slide="7"] .flex__item--right {
  background: #c99e57;
}

.flex__content {
  margin-left: 80px;
  margin: auto;
  width: 85%;
  max-width: 750px;
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: transform 0.2s linear 0.2s, opacity 0.1s linear 0.2s;

  height: 90vh;
  padding-right: 30px;
  overflow-y: scroll;
  overflow-x: hidden;
  text-align: justify;
}

/* Animate-START point */

.flex__container.animate--start .flex__content {
  transform: translate3d(0, -200%, 0);
  opacity: 0;
}

/* Animate-END point */

.flex__container.animate--end .flex__item--left {
  transform: scaleY(0);
}

.flex__container.animate--end .flex__item--right {
  transform: scaleX(0);
}

.flex__container.animate--end .flex__content {
  transform: translate3d(0, 200%, 0);
  opacity: 0;
}

/* sub pages */
.subslide__content {
  position: absolute;
  padding-right: 30px;
  display: none;
}
.subslide--active {
  display: block;
}

.subslider__navi {
  z-index: 999;
  text-align: left;
}

.subslider__navi a {
  text-decoration: none;
  text-align: center;
  line-height: 22px;
  white-space: nowrap;

  margin: 20px 3px;
  padding: 1px 5px;
  color: white;
  color: #283747;
  box-shadow: none;
  background: rgba(0, 0, 0, 0.1);
  background: f3f3f3;
}

.subslider__navi a.active {
  color: #f3f3f3;
  background: rgba(255, 255, 255, 1);
  background: #283747;
}

